<resources>
    <string name="app_name">SanPinch</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="age_default">Age: </string>
    <string name="hp_format">HP: %1$d / %2$d</string>
    <string name="mp_format">MP: %1$d / %2$d</string>
    <string name="san_format">SAN: %1$d / %2$d</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="character_format">\u0020
        STR:  %1$02d \u0020\u0020\u0020\u0020\u0020 INT:  %7$02d\n
        CON:  %2$02d \u0020\u0020\u0020\u0020\u0020   SIZE: %8$02d\n
        DEX:  %3$02d \u0020\u0020\u0020\u0020\u0020\u0020   EDU:  %9$02d\n
        APP:  %4$02d \u0020\u0020\u0020\u0020\u0020\u0020   KNOW: %10$02d\n
        POW:  %5$02d \u0020\u0020\u0020\u0020\u0020   DB:   %11$02d\n
        IDEA: %6$02d \u0020\u0020\u0020\u0020\u0020   LUCK: %12$02d\n
        Cthulhu Mythos: \u0020\u0020\u0020\u0020    %13$02d\n
    </string>
    <string name="title_activity_join">JoinActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="time_estimate_format">"Time estimate (hour) :  "</string>
    <string name="title_activity_game_play">MainActivity</string>
    <string name="title_npcs">NPC</string>
    <string name="title_storycards">Story Cards</string>
    <string name="title_map">Map</string>
    <string name="studyDescription">
        Study of Andrew, a normal room measured 12 ft wide and 12 ft length. \n
        Player once came to this room before, and noticed something is missing from the room.
        The player could not saw the window and door, which should be on the north and south side of
        the room. The location of the window and the door are wall right now. East side of the room is a table
        and west side of the room is book shelf. Pass observation check of shelf will let the player noticed that
        some books on the shelf are same, and after asking Andrew those same books will be missing from the shelf.
        Important item obsidian lion figure with lead base on the table could be found by player after pass check of observation,
        cthulhu mythos or education.However, only if the player pass check of cthulhu mythos, the player could use it
        against the formless spawn.
    </string>
    <string name="title_activity_gameplay_keeper">MainActivity</string>
    <string name="title_activity_game_keeper">MainActivity</string>
    <string name="title_chat">Chat</string>
    <string name="title_players">Players</string>
    <string name="room_format"> Script: Sample Script \n\n
        Time Estimate: 1 hour\n\n
        Host: Mohan (A)\n\n
        Players:\n\n
        \u0020\u0020\u0020\u0020 Me as: Ludwig
        </string>
</resources>